--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <title>WeAmity</title>
 </head>
 <body style="background-color: silver;">
-    <div><!--NavBar Component-->
-        
+    <div class="container-fluid"> <!--Test container1-->
+      <div class="row">
+        <div class="col">
+        <div><!--NavBar Component-->
         <nav class="navbar bg-warning" data-bs-theme="dark"> <!--Navbar Dark Color Scheme--> 
         <nav class="navbar navbar-expand-lg bg-body-tertiary"> <!--Navbar Dark Color Scheme-->
            
 
   <div class="container-fluid">
     <a class="navbar-brand" href="#">WeAmity
-      <img src="Amity University, Noida.jpeg" alt="Bootstrap" width="100" height="75">
+      <img src="Amitylogo1.jpeg" alt="Bootstrap" width="100" height="75">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -64,21 +66,30 @@
   </div>
 </nav>
         </nav>
-</div><!--NavBar Component-->
-<img src="amity-university-vector-logo.png" alt="Amity Vector Logo" width="1450" height="300">
-<br>
-<br>
-<h1 style="font-size: large; background-color:antiquewhite ;">
-    A platform for collaborating students from every Amity University Campus with product/service based startups in order to provide the students an opportunity to resume worthy Projects/Internships, Exposure and Earn through part-time contribution while gaining a hands-on experience in the field of Technology, Management, Arts and Law.
-</h1>
-<br>
-<br>
-<br>
+      </div><!--NavBar Component-->
+        </div>
+        </div>
+        <div class="row text-center">
 
-<h2>
-    <div>
-        <h2 style="font-size: large; background-color: antiquewhite;">Only those product/service based startups can register for collaboration which fullfills the following criteria :-</h2>
-        <ul style="font-size: medium;">
+          <div class="col">
+        <img src="Amitylogo2.png" alt="Amitylogo2" height="300" width="1416">
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col">
+
+            <h1 style="font-size: large; background-color:antiquewhite ;">
+              A platform for collaborating students from every Amity University Campus with product/service based startups in order to provide the students an opportunity to resume worthy Projects/Internships, Exposure and Earn through part-time contribution while gaining a hands-on experience in the field of Technology, Management, Arts and Law.
+          </h1>
+  
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col">
+            <h2 style="font-size: large; background-color: gray; margin-bottom: 0%;">Only those product/service based startups can register for collaboration which fullfills the following criteria :-</h2>
+        <ul style="font-size: medium; background-color: gray; padding-bottom: 10%;">
             <li>One of the Director of startup should be a student or alumni of Amity University.</li>
             <li>Total annual turn over of the startup should be less than 1 Crore Indian Rupees in the last financial year.</li>
             <li>Should be an incorporated startup with a registered Sole Proprietorship, Partnership Firm or Private Limited Company.</li>
@@ -87,7 +98,7 @@
          </ul>
         <div>
 </h2>
-
+</div><!--End of test container 1-->
 
     <div> <!--BootstrapScript-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
