--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <div class="col">
 
-            <h1 style="font-size: large; background-color:antiquewhite ;">
+            <h1 style="font-size: x-large; background-color:antiquewhite ; padding-bottom: 5%;">
               A platform for collaborating students from every Amity University Campus with product/service based startups in order to provide the students an opportunity to resume worthy Projects/Internships, Exposure and Earn through part-time contribution while gaining a hands-on experience in the field of Technology, Management, Arts and Law.
           </h1>
   
@@ -88,8 +88,8 @@
         <div class="row">
 
           <div class="col">
-            <h2 style="font-size: large; background-color: gray; margin-bottom: 0%;">Only those product/service based startups can register for collaboration which fullfills the following criteria :-</h2>
-        <ul style="font-size: medium; background-color: gray; padding-bottom: 10%;">
+            <h2 style="font-size: x-large; background-color: gray; margin-bottom: 0%;">Only those product/service based startups can register for collaboration which fullfills the following criteria :-</h2>
+        <ul style="font-size: larger; background-color: gray; padding-bottom: 10%;">
             <li>One of the Director of startup should be a student or alumni of Amity University.</li>
             <li>Total annual turn over of the startup should be less than 1 Crore Indian Rupees in the last financial year.</li>
             <li>Should be an incorporated startup with a registered Sole Proprietorship, Partnership Firm or Private Limited Company.</li>
