--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <div><!--BootstrapLink-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </div>
@@ -69,10 +72,10 @@
       </div><!--NavBar Component-->
         </div>
         </div>
-        <div class="row text-center">
+        <div class="row">
 
           <div class="col">
-        <img src="Amitylogo2.png" alt="Amitylogo2" height="300" width="1416">
+        <img src="Amitylogo2.png" class="img-fluid" alt="Amitylogo2">
           </div>
         </div>
         <div class="row">
@@ -98,6 +101,12 @@
          </ul>
         <div>
 </h2>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h3>Why WeAmity?</h3>
+          </div>
+        </div>
 </div><!--End of test container 1-->
 
     <div> <!--BootstrapScript-->
