--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
        
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" href="#">Why WeAmity?</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -104,7 +104,11 @@
         </div>
         <div class="row">
           <div class="col">
-            <h3>Why WeAmity?</h3>
+            <h3 style="background-color: antiquewhite; margin-bottom: 0%;">Why WeAmity?</h3>
+            <p style="background-color: antiquewhite; padding-bottom: 5%;">
+              The concept behind the inter-university platform for online collaboration is simple yet effective.<button type="button" class="btn btn-primary">Know More</button>
+
+            </p>
           </div>
         </div>
 </div><!--End of test container 1-->
