--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body style="background-color: silver;">
     <div class="container-fluid"> <!--Test container1-->
       <div class="row">
-        <div class="col">
+        <div class="col" style="background-color: rgb(255, 208, 0);">
         <div><!--NavBar Component-->
-        <nav class="navbar bg-warning" data-bs-theme="dark"> <!--Navbar Dark Color Scheme--> 
+        <nav class="navbar" data-bs-theme="dark"> <!--Navbar Dark Color Scheme--> 
         <nav class="navbar navbar-expand-lg bg-body-tertiary"> <!--Navbar Dark Color Scheme-->
            
 
-  <div class="container-fluid">
+  
     <a class="navbar-brand" href="#">WeAmity
       <img src="Amitylogo1.jpeg" alt="Bootstrap" width="100" height="75">
     </a>
@@ -78,11 +78,11 @@
         <img src="Amitylogo2.png" class="img-fluid" alt="Amitylogo2">
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="background-color: antiquewhite;">
 
           <div class="col">
 
-            <h1 style="font-size: x-large; background-color:antiquewhite ; padding-bottom: 5%;">
+            <h1 style="font-size: x-large; padding-bottom: 5%;">
               A platform for collaborating students from every Amity University Campus with product/service based startups in order to provide the students an opportunity to resume worthy Projects/Internships, Exposure and Earn through part-time contribution while gaining a hands-on experience in the field of Technology, Management, Arts and Law.
           </h1>
   
@@ -90,8 +90,8 @@
         </div>
         <div class="row">
 
-          <div class="col">
-            <h2 style="font-size: x-large; background-color: gray; margin-bottom: 0%;">Only those product/service based startups can register for collaboration which fullfills the following criteria :-</h2>
+          <div class="col" style="background-color: gray;">
+            <h2 style="font-size: x-large; margin-bottom: 0%;">Only those product/service based startups can register for collaboration which fullfills the following criteria :-</h2>
         <ul style="font-size: larger; background-color: gray; padding-bottom: 10%;">
             <li>One of the Director of startup should be a student or alumni of Amity University.</li>
             <li>Total annual turn over of the startup should be less than 1 Crore Indian Rupees in the last financial year.</li>
@@ -103,9 +103,9 @@
 </h2>
         </div>
         <div class="row">
-          <div class="col">
-            <h3 style="background-color: antiquewhite; margin-bottom: 0%;">Why WeAmity?</h3>
-            <p style="background-color: antiquewhite; padding-bottom: 5%;">
+          <div class="col" style="background-color: antiquewhite;">
+            <h3 style="margin-bottom: 0%;">Why WeAmity?</h3>
+            <p style="padding-bottom: 5%;">
               The concept behind the inter-university platform for online collaboration is simple yet effective.<button type="button" class="btn btn-primary">Know More</button>
 
             </p>
@@ -113,9 +113,7 @@
         </div>
 </div><!--End of test container 1-->
 
-    <div> <!--BootstrapScript-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> <!--Bootstrap Script-->
     </div>
 </body>
 </html>
