--- a/WhyWeAmity.html
+++ b/WhyWeAmity.html
@@ -67,6 +67,14 @@
 </nav>
         </nav>
       </div><!--NavBar Component-->
+      </div>
+    </div>
+    <div class="row">
+
+      <div class="col">
+    <img src="Amitylogo2.png" class="img-fluid" alt="Amitylogo2">
+      </div>
+    </div>
         <div class="row">
           <div class="col">
     <h2>Why WeAmity?</h2>
