--- a/WhyWeAmity.html
+++ b/WhyWeAmity.html
@@ -69,15 +69,21 @@
       </div><!--NavBar Component-->
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="background-color: white;">
 
       <div class="col">
+        <div class="d-flex justify-content-center"><!--allign the image in center-->
+
     <img src="Amitylogo2.png" class="img-fluid" alt="Amitylogo2">
+        </div>
       </div>
     </div>
         <div class="row">
           <div class="col">
     <h2>Why WeAmity?</h2>
+    <p>
+      The concept behind the inter-university platform for online collaboration is simple yet effective.
+    </p>
     </div>
         </div>
         <div class="row">
