--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
       </div><!--NavBar Component-->
         </div>
         </div>
-        <div class="row">
+        <div class="row" style="background-color: white;">
 
           <div class="col">
+            <div class="d-flex justify-content-center"><!--allign the image in center-->
         <img src="Amitylogo2.png" class="img-fluid" alt="Amitylogo2">
+            </div>
           </div>
         </div>
         <div class="row" style="background-color: antiquewhite;">
